# vdo.ninja-audience

./: README.md  package-lock.json  package.json
src/: index.html  main.js  manual_link.html  manual_link.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
