[package]
name = "vdo-ninja-audience"
version = "0.1.0"
description = "VDO.Ninja Audience App"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-all", "macos-private-api", "fs-all", "shell-open", "dialog-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
magic-crypt = "3.1.13"
url = "2.5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
